<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Insania Terra</string>
	<string name="enter">Enter</string>
	<string name="quit">Quit</string>
	<string name="go_back">Go Back</string>
	<string name="view_profile">View Profile</string>
	<string name="password">Password</string>
	<string name="user">User</string>
	<string name="profile">Profile</string>
	<string name="menu">Menu</string>
	<string name="hp">HP</string>
	<string name="mp">MP</string>
	<string name="fight">Fight</string>
	<string name="heal">Heal</string>
	<string name="save">Save</string>
	<string name="blank_string"></string>
	<string name="empty_string">_replace_</string>
	<string name="exp">Exp</string>
	<string name="str">STR</string>
	<string name="vit">VIT</string>
	<string name="dex">DEX</string>
	<string name="mag">MAG</string>
	<string name="spr">SPR</string>
	<string name="attack">Attack</string>
	<string name="defense">Defense</string>
	<string name="new_game">New Game</string>
	<string name="load_game">Load Game</string>
	<string name="quit_game">Quit Game</string>
	<string name="town_menu">Town Menu</string>
	<string name="tower_dungeon">Tower Dungeon</string>
	<string name="name">Name</string>
	<string name="vocation">Vocation</string>
	<string name="done">Done</string>
	<string-array name="vocation_array">
        <item>Knight</item>
        <item>Mage</item>
    </string-array>
        <string name="report">Report</string>
        <string name="settings">Settings</string>
        <string name="game_over">Game Over</string>
        <string name="equipment">Equipment</string>
</resources>
