<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="1">
	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/textView1"
		android:text="@string/menu"
		android:layout_width="fill_parent"
		android:layout_weight="0.10"
		android:gravity="center">
	</TextView>
	<LinearLayout
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_weight="0.10">
		<LinearLayout
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:id="@+id/linearLayout2"
			android:layout_width="wrap_content">
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/button3"
				android:onClick="viewProfileMenu"
				android:layout_width="fill_parent"
				android:text="@string/profile"></Button>
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/button4"
				android:layout_width="fill_parent"
				android:text="@string/fight"
				android:onClick="fightMonster"></Button>
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/button5"
				android:layout_width="fill_parent"
				android:text="@string/heal"
				android:onClick="healCharacter"></Button>
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/button6"
				android:layout_width="fill_parent"
				android:text="@string/save"></Button>
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/button1"
				android:onClick="viewInitialMenu"
				android:layout_width="144dp"
				android:text="@string/go_back"></Button>
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/button2"
				android:onClick="closeProgram"
				android:layout_width="fill_parent"
				android:text="@string/quit"></Button>
		</LinearLayout>
		<EditText
			android:layout_weight="1"
			android:layout_height="421dp"
			android:textSize="18px"
			android:gravity="top"
			android:scrollbars="vertical"
			android:inputType="textMultiLine"
			android:id="@+id/logText"
			android:clickable="false"
			android:layout_width="fill_parent"
			android:editable="false"
			android:focusable="false">
			<requestFocus></requestFocus>
		</EditText>
	</LinearLayout>
</LinearLayout>
