<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:weightSum="1">
	<Button
		android:id="@+id/button2"
		android:layout_centerInParent="true"
		android:text="@string/load_game"
		android:onClick="loadGame"
		android:layout_width="180dp"
		android:layout_height="60dp"></Button>
	<Button
		android:id="@+id/button1"
		android:layout_centerHorizontal="true"
		android:layout_height="60dp"
		android:layout_width="180dp"
		android:layout_above="@id/button2"
		android:onClick="viewNewGameScreen"
		android:text="@string/new_game"></Button>
	<Button
		android:layout_below="@id/button2"
		android:layout_centerInParent="true"
		android:text="@string/quit_game"
		android:onClick="closeProgram"
		android:layout_width="180dp"
		android:layout_height="60dp"
		android:id="@+id/button3"></Button>
</RelativeLayout>
