<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="1">
	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content"
			android:text="@string/user"></TextView>
		<EditText
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:id="@+id/userText">
			<requestFocus></requestFocus>
		</EditText>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content"
			android:text="@string/password"></TextView>
		<EditText
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:id="@+id/passwordText"></EditText>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linearLayout3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button
			android:text="@string/enter"
			android:layout_width="162dp"
			android:id="@+id/button1"
			android:layout_height="wrap_content"
			android:onClick="viewMapScreenviewMainMenu"></Button>
		<Button
			android:text="@string/quit"
			android:onClick="closeProgram"
			android:layout_width="161dp"
			android:id="@+id/button2"
			android:layout_height="wrap_content"></Button>
	</LinearLayout>
</LinearLayout>
