<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="1">
	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/textView2"
		android:layout_width="fill_parent"
		android:text="@string/profile"
		android:gravity="center"></TextView>
	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:text="TextView"
		android:layout_height="0dp">
	</TextView>
	<LinearLayout
		android:id="@+id/linearLayout1"
		android:weightSum="1"
		android:layout_width="fill_parent"
		android:layout_height="54dp"
		android:orientation="horizontal"
		android:layout_weight="0.15">
		<ImageView
			android:src="@drawable/game_icon"
			android:id="@+id/imageView1"
			android:layout_width="67dp"
			android:layout_height="fill_parent">
		</ImageView>
		<LinearLayout
			android:id="@+id/linearLayout4"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:weightSum="1">
			<TextView
				android:text="TextView"
				android:layout_width="fill_parent"
				android:layout_height="38dp"
				android:gravity="center_vertical|bottom"
				android:id="@+id/levelText"></TextView>
			<TextView
				android:text="TextView"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical"
				android:id="@+id/nameText"></TextView>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout2"
		android:layout_width="fill_parent">
		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/textView3"
			android:text="@string/hp"
			android:layout_width="95dp"></TextView>
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/minMaxHPText"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:text="@string/blank_string"></TextView>
	</LinearLayout>
	<ProgressBar
		android:layout_height="wrap_content"
		style="?android:attr/progressBarStyleHorizontal"
		android:id="@+id/hpBar"
		android:layout_width="287dp">
	</ProgressBar>
	<LinearLayout
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout3"
		android:layout_width="fill_parent">
		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/textView4"
			android:text="@string/mp"
			android:layout_width="94dp"></TextView>
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/minMaxMPText"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:text="@string/blank_string"></TextView>
	</LinearLayout>
	<ProgressBar
		android:layout_height="wrap_content"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="286dp"
		android:id="@+id/mpBar">
	</ProgressBar>
	<LinearLayout
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout3"
		android:layout_width="fill_parent">
		<TextView
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="94dp"
			android:id="@+id/TextView01"
			android:layout_height="wrap_content"
			android:text="@string/exp"></TextView>
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/minMaxExpText"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:text="@string/blank_string"></TextView>
	</LinearLayout>
	<ProgressBar
		style="?android:attr/progressBarStyleHorizontal"
		android:id="@+id/expBar"
		android:layout_height="wrap_content"
		android:layout_width="286dp"></ProgressBar>
	<LinearLayout
		android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TextView
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="94dp"
			android:id="@+id/TextView02"
			android:layout_height="wrap_content"
			android:text="@string/attack"></TextView>
		<TextView
			android:text="@string/blank_string"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/attackText"
			android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/LinearLayout05"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="0.18">
		<TextView
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="95dp"
			android:id="@+id/TextView11"
			android:layout_height="wrap_content"
			android:text="@string/defense"></TextView>
		<TextView
			android:text="@string/blank_string"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/defenseText"
			android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<Button
		android:layout_height="wrap_content"
		android:id="@+id/button1"
		android:text="@string/go_back"
		android:onClick="viewMapScreen"
		android:layout_width="168dp"></Button>
</LinearLayout>
